# energiminer

./: CMakeLists.txt
cmake/: EthCompilerSettings.cmake
energiminer/: CMakeLists.txt  MinerAux.cpp  MinerAux.h  main.cpp
libegihash-cl/: CMakeLists.txt  OpenCLMiner.cpp  OpenCLMiner.h
libnrghash-cuda/: CUDAMiner.cpp  CUDAMiner.h  ethash_cuda_miner_kernel.h
nrgcore/: CMakeLists.txt  mineplant.cpp  mineplant.h  miner.cpp  miner.h
primitives/: block.h  work.cpp
protocol/: CMakeLists.txt  PoolClient.h  PoolManager.cpp
protocol/stratum/: StratumClient.cpp  StratumClient.h
